--- a/src/components/article-params-form/ArticleParamsForm.module.scss
+++ b/src/components/article-params-form/ArticleParamsForm.module.scss
@@ -4,18 +4,43 @@
 	width: 616px;
 	height: 100%;
 	overflow: scroll;
+	font-family: 'Open Sans', sans-serif;
 	transform: translate(-616px);
 	transition: transform 0.5s ease;
 }
 
 .container_open {
+	position: fixed;
+	z-index: 1;
 	transform: translate(0);
+}
+
+.overlay {
+	position: fixed;
+	inset: 0;
+	z-index: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(0 0 0 / 80%);
+	visibility: hidden;
+	opacity: 0;
+	transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+
+.overlayVisible {
+	visibility: visible;
+	opacity: 1;
+}
+
+.lockScroll {
+	overflow: hidden;
 }
 
 .form {
 	display: flex;
 	flex-shrink: 0;
 	flex-direction: column;
+	row-gap: 50px;
 	box-sizing: border-box;
 	width: 616px;
 	height: auto;
@@ -29,4 +54,11 @@
 	display: flex;
 	justify-content: space-between;
 	margin-top: auto;
+}
+
+.title {
+	font-weight: 800;
+	font-size: 31px;
+	letter-spacing: 0%;
+	text-transform: uppercase;
 }
